--- a/styles.css
+++ b/styles.css
@@ -26,20 +26,14 @@ p {
   display: block;
 }
 
-.channel-picture {
-  display: inline-block;
-  width: 50px;
-  vertical-align: top;
+.video-info-grid {
+  display: grid;
+  grid-template-columns: 50px 1fr;
 }
 
 .profile-picture {
   width: 40px;
   border-radius: 100%;
-}
-
-.video-info {
-  display: inline-block;
-  width: 200px;
 }
 
 .video-title {
