--- a/styles/video.css
+++ b/styles/video.css
@@ -7,10 +7,25 @@
 
 .thumbnail-row {
   margin-bottom: 12px;
+  position: relative;
 }
 
 .video-thumbnail {
   width: 100%;
+}
+
+.video-time {
+  background-color: black;
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 500;
+  padding: 4px;
+  border-radius: 2px;
+
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
 
 .video-info-grid {
