--- a/styles/header.css
+++ b/styles/header.css
@@ -107,8 +107,28 @@
   height: 24px;
 }
 
+.notifications-icon-container {
+  position: relative;
+}
+
 .notification-icon {
   height: 24px;
+}
+
+.notifications-count {
+  background-color: rgb(200, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 50%;
+
+  position: absolute;
+  top: -2px;
+  right: -5px;
 }
 
 .current-user-picture {
