--- a/styles/video.css
+++ b/styles/video.css
@@ -46,6 +46,11 @@
   margin-bottom: 10px;
 }
 
+.video-link {
+  text-decoration: none;
+  color: black;
+}
+
 .video-author, .video-stats {
   font-size: 12px;
   color: rgb(96, 96, 96);
@@ -53,4 +58,9 @@
 
 .video-author {
   margin-bottom: 4px;
+}
+
+.channel-link {
+  text-decoration: none;
+  color: rgb(96, 96, 96);
 }
