--- a/YouTube - final project/styles/video.css
+++ b/YouTube - final project/styles/video.css
@@ -33,9 +33,56 @@
   grid-template-columns: 50px 1fr;
 }
 
+.channel-picture {
+  display: inline-block;
+  position: relative;
+
+  height: 44px;
+}
+
 .profile-picture {
   width: 36px;
   border-radius: 50%;
+}
+
+.channel-info {
+  position: absolute;
+  bottom: -70px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+
+  background-color: white;
+  padding: 12px;
+  padding-right: 16px;
+  border-radius: 7px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 150ms;
+}
+
+.channel-picture:hover .channel-info {
+  opacity: 1;
+}
+
+.channel-picture {
+  width: 44px;
+  border-radius: 50%;
+  margin-right: 7px;
+}
+
+.channel-author {
+  white-space: nowrap;
+  font-size: 14px;
+  font-weight: 700;
+  margin-bottom: 3px;
+}
+
+.channel-stats {
+  white-space: nowrap;
+  color: rgb(96, 96, 96);
 }
 
 .video-title {
@@ -51,7 +98,7 @@
   color: black;
 }
 
-.video-author, .video-stats {
+.video-author, .video-stats, .channel-stats {
   font-size: 12px;
   color: rgb(96, 96, 96);
 }
