--- a/YouTube - final project/styles/video.css
+++ b/YouTube - final project/styles/video.css
@@ -1,16 +1,22 @@
-@media (max-width: 750px) {
+@media (max-width: 500px) {
+  .video-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 750px) {
   .video-grid {
     grid-template-columns: 1fr 1fr;
   }
 }
 
-@media (min-width: 751px) and (max-width: 999px) {
+@media (min-width: 751px) and (max-width: 1000px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1001px) {
   .video-grid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
